--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="main.js"></script>
   </head>
   <body>
     <div id="container">
       <div>
-        <img src="img/bg0.png" />
+        <img src="img/bg0.png" height="auto" />
       </div>
       <div id="rope">
         <img src="img/ropehide-sheet0.png" id="rope0" />
@@ -19,4 +18,5 @@
       </div>
     </div>
   </body>
+  <script src="main.js"></script>
 </html>
