rope growing with a lot of bugs

--- a/start.html
+++ b/start.html
@@ -4,19 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Animal Catcher</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="container">
-      <div>
-        <img src="img/bg0.png" height="auto" />
-      </div>
-      <div id="rope">
-        <img src="img/ropehide-sheet0.png" id="rope0" />
-        <img src="img/pliers.png" id="pliers" />
+    <div>
+      <div id="container">
+        <img src="img/animal catcher.png" />
       </div>
     </div>
   </body>
-  <script src="second.js"></script>
 </html>
