add catching function

--- a/index.html
+++ b/index.html
@@ -2,21 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Title</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="container">
-      <div>
-        <img src="img/bg0.png" height="auto" />
-      </div>
+      <h3 id="score">0</h3>
       <div id="rope">
-        <img src="img/ropehide-sheet0.png" id="rope0" />
-        <img src="img/pliers.png" id="pliers" />
+        <img src="ropehide-sheet0.png" id="rope0" />
+        <img src="pliers.png" id="pliers" />
       </div>
     </div>
+    <script src="main.js"></script>
   </body>
-  <script src="second.js"></script>
 </html>
