Add start and result to game

--- a/win.html
+++ b/win.html
@@ -8,8 +8,8 @@
 </head>
 <body id="start">
   <div class="start-game">
-    <h1></h1>
-    <a href="game.html" id="start-button">Start game</a>
+    <h1>You won!</h1>
+    <a href="game.html" id="start-button">Play again</a>
   </div>
 </body>
 </html>
