--- a/loss.html
+++ b/loss.html
@@ -8,8 +8,8 @@
 </head>
 <body id="start">
   <div class="start-game">
-    <h1></h1>
-    <a href="game.html" id="start-button">Start game</a>
+    <h1>You lost</h1>
+    <a href="game.html" id="start-button">Try again</a>
   </div>
 </body>
 </html>
