--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Start game</title>
-</head>
-<body id="start">
-  <div class="start-game">
-    <h1></h1>
-    <a href="game.html" id="start-button">Start game</a>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Start game</title>
+  </head>
+  <body id="start">
+    <div class="start-game">
+      <h1></h1>
+      <a href="game.html" id="start-button">Start game</a>
+    </div>
+  </body>
 </html>
