add more style for pages

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Start game</title>
   </head>
+
   <body id="start">
     <div class="start-game">
-      <h1></h1>
-      <a href="game.html" id="start-button">Start game</a>
+      <h1>Press the "SPACE" key to catch all animals within 60s</h1>
+      <h1 class="text">START CHALLENGE NOW</h1>
+      <a href="game.html" id="start-button">START GAME</a>
     </div>
   </body>
 </html>
