--- a/loss.html
+++ b/loss.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Start game</title>
-</head>
-<body id="start">
-  <div class="start-game">
-    <h1>You lost</h1>
-    <a href="game.html" id="start-button">Try again</a>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Game over</title>
+  </head>
+
+  <body id="result">
+    <div class="result-container">
+      <div class="gameOver">GAME OVER</div>
+      <div class="box">
+        <p class="">YOU CATCH</p>
+
+        <div id="scores">
+          <p id="current_score" class="n1">0</p>
+          <p>/12</p>
+        </div>
+
+        <p>ANIMALS IN TOTALL</p>
+        <a href="game.html" id="start-button">Try again</a>
+      </div>
+    </div>
+  </body>
+
+  <script src="finish.js"></script>
 </html>
