--- a/win.html
+++ b/win.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Start game</title>
-</head>
-<body id="start">
-  <div class="start-game">
-    <h1>You won!</h1>
-    <a href="game.html" id="start-button">Play again</a>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Win Page</title>
+  </head>
+  <body></body>
 </html>
