fixed results pages

--- a/win.html
+++ b/win.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Win Page</title>
   </head>
-  <body></body>
+
+  <body id="result">
+    <div class="result-container">
+      <div class="gameOver">GAME OVER</div>
+      <div class="box">
+        <p class="win">YOU WIN!</p>
+        <p class="">YOU CAUGHT ALL ANIMALS</p>
+        <a href="game.html" id="start-button">Play again</a>
+      </div>
+    </div>
+  </body>
 </html>
