--- a/loss.html
+++ b/loss.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Game over</title>
   </head>
 
@@ -24,5 +24,5 @@
     </div>
   </body>
 
-  <script src="finish.js"></script>
+  <script src="result.js"></script>
 </html>
