--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div class="start-game">
       <h1>Press the "SPACE" key to catch all animals within 60s</h1>
       <h1 class="text">START CHALLENGE NOW</h1>
-      <a href="game.html" id="start-button">START GAME</a>
+      <a href="game.html" id="start-button">EASY MODE</a>
+      <a href="game1.html" id="start-button">HARD MODE</a>
     </div>
   </body>
 </html>
