--- a/loss.html
+++ b/loss.html
@@ -19,7 +19,7 @@
         </div>
 
         <p>ANIMALS IN TOTALL</p>
-        <a href="game.html" id="start-button">Try again</a>
+        <a href="index.html" id="start-button">Try again</a>
       </div>
     </div>
   </body>
