--- a/win.html
+++ b/win.html
@@ -14,7 +14,7 @@
       <div class="box">
         <p class="win">YOU WIN!</p>
         <p class="">YOU CAUGHT ALL ANIMALS</p>
-        <a href="game.html" id="start-button">Play again</a>
+        <a href="index.html" id="start-button">Play again</a>
       </div>
     </div>
   </body>
